index.html: updated table of contents style

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -36,88 +36,125 @@
         <p>我们的队号是2276A，再次感谢您们的关注和支持！</p>
     </div>
 
-    <!-- ================= TABLE OF CONTENTS ================= -->
+    <!-- ================= TABLE OF CONTENTS PAGE 1 ================= -->
     <div class="sheet">
-        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目录</h1>
-        <ul style="font-size: 18px; line-height: 2; list-style-type: none; padding-left: 10px; column-count: 2;">
-            <li><strong><a href="ch01.html">第一章：我们的故事</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>1.1 我们的大家庭</li>
-                    <li>1.2 我们的队规</li>
-                    <li>1.3 赛季规划</li>
-                    <li>1.4 赛季流程图</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch02.html">第二章：规则大揭秘</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>2.1 游戏概览</li>
-                    <li>2.2 场地元素</li>
-                    <li>2.3 机器人尺寸</li>
-                    <li>2.4 得分规则</li>
-                    <li>2.5 团队赛规则</li>
-                    <li>2.6 技能赛规则</li>
-                    <li>2.7 设计约束</li>
-                    <li>2.8 战术推演</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch03.html">第三章：我们的小小科学家之路</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>3.1 STEM 是什么？</li>
-                    <li>3.2 设计约束</li>
-                    <li>3.3 机械原理</li>
-                    <li>3.4 编程概念</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch04.html">第四章：脑洞大开</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>4.1 任务拆解</li>
-                    <li>4.2 电机分配</li>
-                    <li>4.3 底盘设计</li>
-                    <li>4.4 抓取设计</li>
-                    <li>4.5 抬升设计</li>
-                    <li>4.6 Beam抓取</li>
-                    <li>4.7 方案整合</li>
-                </ul>
-            </li>
-        </ul>
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录</h1>
+        <!-- Centered Container for TOC -->
+        <div style="display: flex; justify-content: center;">
+            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+                
+                <!-- Chapter 1 -->
+                <li style="margin: 5px 0;"><strong><a href="ch01.html">第一章：我们的故事</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">1.1 我们的大家庭</li>
+                        <li style="margin: 5px 0;">1.2 我们的队规</li>
+                        <li style="margin: 5px 0;">1.3 赛季规划</li>
+                        <li style="margin: 5px 0;">1.4 赛季流程图</li>
+                    </ul>
+                </li>
+
+                <!-- Chapter 2 -->
+                <li style="margin: 5px 0;"><strong><a href="ch02.html">第二章：规则大揭秘</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">2.1 游戏概览</li>
+                        <li style="margin: 5px 0;">2.2 场地元素</li>
+                        <li style="margin: 5px 0;">2.3 机器人尺寸</li>
+                        <li style="margin: 5px 0;">2.4 得分规则</li>
+                        <li style="margin: 5px 0;">2.5 团队赛规则</li>
+                        <li style="margin: 5px 0;">2.6 技能赛规则</li>
+                        <li style="margin: 5px 0;">2.7 设计约束</li>
+                        <li style="margin: 5px 0;">2.8 战术推演</li>
+                    </ul>
+                </li>
+
+            </ul>
+        </div>
         <div class="page-number">i</div>
     </div>
+
+    <!-- ================= TABLE OF CONTENTS PAGE 2 ================= -->
     <div class="sheet">
-        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目录 (续)</h1>
-        <ul style="font-size: 18px; line-height: 2; list-style-type: none; padding-left: 10px; column-count: 2;">
-            <li><strong><a href="ch05.html">第五章：搭建与调试</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>5.1 搭建启动会</li>
-                    <li>5.2 搭建过程</li>
-                    <li>5.3 编程实现</li>
-                    <li>5.4 系统联调</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch06.html">第六章：真理是试出来的</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>6.1 测试计划</li>
-                    <li>6.2 测试与训练</li>
-                    <li>6.3 数据分析</li>
-                    <li>6.4 改进计划</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch07.html">第七章：进化的力量</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>7.1 二代车迭代</li>
-                    <li>7.2 三代车迭代 (气动)</li>
-                </ul>
-            </li>
-            <li><strong><a href="ch08.html">第八章：最强大脑的战术</a></strong>
-                <ul style="padding-left: 20px; font-size: 16px;">
-                    <li>8.1 比赛策略</li>
-                    <li>8.2 赛前准备</li>
-                    <li>8.3 赛后分析</li>
-                    <li>8.4 设计总结</li>
-                </ul>
-            </li>
-            <li><strong><a href="glossary.html">英语术语表</a></strong></li>
-        </ul>
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
+        <div style="display: flex; justify-content: center;">
+            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+                
+                <!-- Chapter 3 -->
+                <li style="margin: 5px 0;"><strong><a href="ch03.html">第三章：我们的小小科学家之路</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">3.1 STEM 是什么？</li>
+                        <li style="margin: 5px 0;">3.2 设计约束</li>
+                        <li style="margin: 5px 0;">3.3 机械原理</li>
+                        <li style="margin: 5px 0;">3.4 编程概念</li>
+                    </ul>
+                </li>
+
+                <!-- Chapter 4 -->
+                <li style="margin: 5px 0;"><strong><a href="ch04.html">第四章：脑洞大开</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">4.1 任务拆解</li>
+                        <li style="margin: 5px 0;">4.2 电机分配</li>
+                        <li style="margin: 5px 0;">4.3 底盘设计</li>
+                        <li style="margin: 5px 0;">4.4 抓取设计</li>
+                        <li style="margin: 5px 0;">4.5 抬升设计</li>
+                        <li style="margin: 5px 0;">4.6 Beam抓取</li>
+                        <li style="margin: 5px 0;">4.7 方案整合</li>
+                    </ul>
+                </li>
+
+                 <!-- Chapter 5 -->
+                 <li style="margin: 5px 0;"><strong><a href="ch05.html">第五章：搭建与调试</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">5.1 搭建启动会</li>
+                        <li style="margin: 5px 0;">5.2 搭建过程</li>
+                        <li style="margin: 5px 0;">5.3 编程实现</li>
+                        <li style="margin: 5px 0;">5.4 系统联调</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         <div class="page-number">ii</div>
+    </div>
+
+    <!-- ================= TABLE OF CONTENTS PAGE 3 ================= -->
+    <div class="sheet">
+        <h1 style="font-size: 48px; border: none; color: #005f9e; text-align: center; margin-bottom: 30px;">目&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;录&nbsp; (续)</h1>
+        <div style="display: flex; justify-content: center;">
+            <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
+
+                <!-- Chapter 6 -->
+                <li style="margin: 5px 0;"><strong><a href="ch06.html">第六章：真理是试出来的</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">6.1 测试计划</li>
+                        <li style="margin: 5px 0;">6.2 测试与训练</li>
+                        <li style="margin: 5px 0;">6.3 数据分析</li>
+                        <li style="margin: 5px 0;">6.4 改进计划</li>
+                    </ul>
+                </li>
+
+                <!-- Chapter 7 -->
+                <li style="margin: 5px 0;"><strong><a href="ch07.html">第七章：进化的力量</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">7.1 二代车迭代</li>
+                        <li style="margin: 5px 0;">7.2 三代车迭代 (气动)</li>
+                    </ul>
+                </li>
+
+                <!-- Chapter 8 -->
+                <li style="margin: 5px 0;"><strong><a href="ch08.html">第八章：最强大脑的战术</a></strong>
+                    <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
+                        <li style="margin: 5px 0;">8.1 比赛策略</li>
+                        <li style="margin: 5px 0;">8.2 赛前准备</li>
+                        <li style="margin: 5px 0;">8.3 赛后分析</li>
+                        <li style="margin: 5px 0;">8.4 设计总结</li>
+                    </ul>
+                </li>
+
+                <!-- Glossary -->
+                <li style="margin: 5px 0;"><strong><a href="glossary.html">英语术语表</a></strong></li>
+
+            </ul>
+        </div>
+        <div class="page-number">iii</div>
     </div>
 
     <script src="assets/scripts/common-elements.js"></script>
