--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -44,26 +44,29 @@
             <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
                 
                 <!-- Chapter 1 -->
-                <li style="margin: 5px 0;"><strong><a href="ch01.html">第一章：我们的故事</a></strong>
+                <li style="margin: 5px 0;"><strong><a href="ch01.html">第一章：梦开始的地方</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
                         <li style="margin: 5px 0;">1.1 我们的大家庭</li>
-                        <li style="margin: 5px 0;">1.2 我们的队规</li>
-                        <li style="margin: 5px 0;">1.3 赛季规划</li>
-                        <li style="margin: 5px 0;">1.4 赛季流程图</li>
+                        <li style="margin: 5px 0;">1.2 成员介绍</li>
+                        <li style="margin: 5px 0;">1.3 赛队分工及赛队管理制度</li>
+                        <li style="margin: 5px 0;">1.4 团队管理制度与冲突解决</li>
+                        <li style="margin: 5px 0;">1.5 赛季总览</li>
+                        <li style="margin: 5px 0;">1.6 会议记录</li>
                     </ul>
                 </li>
 
                 <!-- Chapter 2 -->
                 <li style="margin: 5px 0;"><strong><a href="ch02.html">第二章：规则大揭秘</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">2.1 游戏概览</li>
-                        <li style="margin: 5px 0;">2.2 场地元素</li>
-                        <li style="margin: 5px 0;">2.3 机器人尺寸</li>
-                        <li style="margin: 5px 0;">2.4 得分规则</li>
-                        <li style="margin: 5px 0;">2.5 团队赛规则</li>
-                        <li style="margin: 5px 0;">2.6 技能赛规则</li>
-                        <li style="margin: 5px 0;">2.7 设计约束</li>
-                        <li style="margin: 5px 0;">2.8 战术推演</li>
+                        <li style="margin: 5px 0;">2.1 这是一个什么游戏？</li>
+                        <li style="margin: 5px 0;">2.2 场地上的宝贝们</li>
+                        <li style="margin: 5px 0;">2.3 机器人能长多大？</li>
+                        <li style="margin: 5px 0;">2.4 怎么投喂机器人？</li>
+                        <li style="margin: 5px 0;">2.5 怎么才能得高分？</li>
+                        <li style="margin: 5px 0;">2.6 团队赛：换手惊魂</li>
+                        <li style="margin: 5px 0;">2.7 技能赛特别规则</li>
+                        <li style="margin: 5px 0;">2.8 设计约束总结</li>
+                        <li style="margin: 5px 0;">2.9 我们的战术推演</li>
                     </ul>
                 </li>
 
@@ -82,32 +85,33 @@
                 <li style="margin: 5px 0;"><strong><a href="ch03.html">第三章：我们的小小科学家之路</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
                         <li style="margin: 5px 0;">3.1 STEM 是什么？</li>
-                        <li style="margin: 5px 0;">3.2 设计约束</li>
-                        <li style="margin: 5px 0;">3.3 机械原理</li>
-                        <li style="margin: 5px 0;">3.4 编程概念</li>
+                        <li style="margin: 5px 0;">3.2 “边界”中的自由 (Constraints)</li>
+                        <li style="margin: 5px 0;">3.3 机械魔法</li>
+                        <li style="margin: 5px 0;">3.4 让机器人变聪明</li>
                     </ul>
                 </li>
 
                 <!-- Chapter 4 -->
-                <li style="margin: 5px 0;"><strong><a href="ch04.html">第四章：脑洞大开</a></strong>
+                <li style="margin: 5px 0;"><strong><a href="ch04.html">第四章：概念设计与方案研讨</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">4.1 任务拆解</li>
-                        <li style="margin: 5px 0;">4.2 电机分配</li>
-                        <li style="margin: 5px 0;">4.3 底盘设计</li>
-                        <li style="margin: 5px 0;">4.4 抓取设计</li>
-                        <li style="margin: 5px 0;">4.5 抬升设计</li>
-                        <li style="margin: 5px 0;">4.6 Beam抓取</li>
-                        <li style="margin: 5px 0;">4.7 方案整合</li>
+                        <li style="margin: 5px 0;">4.1 竞赛规则分析与功能定义</li>
+                        <li style="margin: 5px 0;">4.2 系统架构与模块划分</li>
+                        <li style="margin: 5px 0;">4.3 备选方案评估与淘汰</li>
+                        <li style="margin: 5px 0;">4.4 一代车设计定稿 (Final Design)</li>
+                        <li style="margin: 5px 0;">4.5 预设比赛策略 (Initial Strategy)</li>
                     </ul>
                 </li>
 
                  <!-- Chapter 5 -->
-                 <li style="margin: 5px 0;"><strong><a href="ch05.html">第五章：搭建与调试</a></strong>
+                 <li style="margin: 5px 0;"><strong><a href="ch05.html">第五章：系统实施与搭建</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">5.1 搭建启动会</li>
-                        <li style="margin: 5px 0;">5.2 搭建过程</li>
-                        <li style="margin: 5px 0;">5.3 编程实现</li>
-                        <li style="margin: 5px 0;">5.4 系统联调</li>
+                        <li style="margin: 5px 0;">5.1 资源统筹与端口规划</li>
+                        <li style="margin: 5px 0;">5.2 机械装配：底盘系统</li>
+                        <li style="margin: 5px 0;">5.3 机械装配：操作臂与气动抓手</li>
+                        <li style="margin: 5px 0;">5.4 系统集成与布线工艺</li>
+                        <li style="margin: 5px 0;">5.5 软件配置：设备初始化</li>
+                        <li style="margin: 5px 0;">5.6 遥控逻辑设计 (Teleop)</li>
+                        <li style="margin: 5px 0;">5.7 传感器集成与自动化测试</li>
                     </ul>
                 </li>
             </ul>
@@ -122,30 +126,38 @@
             <ul style="font-size: 18px; line-height: 1.4; list-style-type: none; padding: 0; width: fit-content; min-width: 50%;">
 
                 <!-- Chapter 6 -->
-                <li style="margin: 5px 0;"><strong><a href="ch06.html">第六章：真理是试出来的</a></strong>
+                <li style="margin: 5px 0;"><strong><a href="ch06.html">第六章：测试验证与实战评估</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">6.1 测试计划</li>
-                        <li style="margin: 5px 0;">6.2 测试与训练</li>
-                        <li style="margin: 5px 0;">6.3 数据分析</li>
-                        <li style="margin: 5px 0;">6.4 改进计划</li>
+                        <li style="margin: 5px 0;">6.1 单元测试：抓取系统的摩擦力优化</li>
+                        <li style="margin: 5px 0;">6.2 功能测试：堆叠定位精度的提升</li>
+                        <li style="margin: 5px 0;">6.3 系统集成：半自动化逻辑导入</li>
+                        <li style="margin: 5px 0;">6.4 实战记录：胜炫北京城市赛</li>
+                        <li style="margin: 5px 0;">6.5 赛后技术评估：优势与缺陷</li>
+                        <li style="margin: 5px 0;">6.6 比赛数据与结果公示</li>
                     </ul>
                 </li>
 
                 <!-- Chapter 7 -->
-                <li style="margin: 5px 0;"><strong><a href="ch07.html">第七章：进化的力量</a></strong>
+                <li style="margin: 5px 0;"><strong><a href="ch07.html">第七章：二代车的设计迭代</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">7.1 二代车迭代</li>
-                        <li style="margin: 5px 0;">7.2 三代车迭代 (气动)</li>
+                        <li style="margin: 5px 0;">7.1 迭代启动：从经验中改进</li>
+                        <li style="margin: 5px 0;">7.2 机械优化一：底盘传动结构重构</li>
+                        <li style="margin: 5px 0;">7.3 机械优化二：三角区定位角改进</li>
+                        <li style="margin: 5px 0;">7.4 机械优化三：面状辅助堆叠系统</li>
+                        <li style="margin: 5px 0;">7.5 二代车训练与调试记录</li>
+                        <li style="margin: 5px 0;">7.6 软件升级：传感器融合</li>
+                        <li style="margin: 5px 0;">7.7 实战检验：北京校际联赛</li>
                     </ul>
                 </li>
 
                 <!-- Chapter 8 -->
-                <li style="margin: 5px 0;"><strong><a href="ch08.html">第八章：最强大脑的战术</a></strong>
+                <li style="margin: 5px 0;"><strong><a href="ch08.html">第八章：比赛策略与赛后分析</a></strong>
                     <ul style="padding-left: 20px; font-size: 16px; list-style-type: none;">
-                        <li style="margin: 5px 0;">8.1 比赛策略</li>
-                        <li style="margin: 5px 0;">8.2 赛前准备</li>
-                        <li style="margin: 5px 0;">8.3 赛后分析</li>
-                        <li style="margin: 5px 0;">8.4 设计总结</li>
+                        <li style="margin: 5px 0;">8.1 战术规划：基于二代车特性的策略</li>
+                        <li style="margin: 5px 0;">8.2 赛前准备与检查 (Pre-Match)</li>
+                        <li style="margin: 5px 0;">8.3 比赛记录：北京校际联赛</li>
+                        <li style="margin: 5px 0;">8.4 赛后技术复盘 (Post-Match Analysis)</li>
+                        <li style="margin: 5px 0;">8.5 总结与未来计划</li>
                     </ul>
                 </li>
 
