index.html: minor fixes

--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -27,7 +27,7 @@
     <!-- ================= PREFACE ================= -->
     <div class="sheet">
         <h1>前言</h1>
-        <div class="img-placeholder" style="height: 300px; margin-bottom: 20px;">
+        <div class="img-placeholder" style="height: 300px; margin-top: 30px;margin-bottom: 30px;">
             <!-- Placeholder for a team photo or other image -->
         </div>
         <p>尊敬的评委老师们：</p>
@@ -169,8 +169,8 @@
         <div class="page-number">iii</div>
     </div>
 
-    <script src="assets/scripts/common-elements.js"></script>
-    <script src="assets/scripts/navigation-button.js"></script>
+    <!-- <script src="assets/scripts/common-elements.js"></script>
+    <script src="assets/scripts/navigation-button.js"></script> -->
 </body>
 
 </html>
