--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -41,7 +41,7 @@
         
         <p>在结束北京城市赛（第一场）后，工程团队对一代车的性能瓶颈进行了系统性复盘。结合比赛录像与《参赛总结》，我们确立了二代车（Gen 2）的改进方向。</p>
 
-        <div class="highlight-box" style="background-color: #F4ECF7; border: 1px solid #8E44AD; padding: 20px;">
+        <div class="highlight-box type-purple">
             <h3>二代车核心设计目标 (Design Goals)</h3>
             <ol style="line-height: 2;">
                 <li><strong>底盘通过性 (Passability)：</strong> 解决底盘过低导致的“卡梁”问题，确保机器人能流畅穿越装填区。</li>
