--- a/engineering_notebook/ch08.html
+++ b/engineering_notebook/ch08.html
@@ -198,7 +198,7 @@
         </p>
 
         <h3>后续改进方向 (Future Plan)</h3>
-        <div class="highlight-box" style="border-left: 5px solid #008080; padding-left: 15px; margin-top: 20px;">
+        <div class="highlight-box type-teal">
             <p>针对本次比赛暴露出的<strong>三角区掉件</strong>问题，我们计划在下一阶段进行以下优化：</p>
             <ol>
                 <li><strong>夹具重构：</strong> 在夹具上增加限位结构或摩擦增强设计，确保在剧烈转向时销钉不脱落。</li>
