--- a/engineering_notebook/index.html
+++ b/engineering_notebook/index.html
@@ -169,8 +169,8 @@
         <div class="page-number">iii</div>
     </div>
 
-    <!-- <script src="assets/scripts/common-elements.js"></script>
-    <script src="assets/scripts/navigation-button.js"></script> -->
+    <!-- <script src="assets/scripts/common-elements.js"></script> -->
+    <script src="assets/scripts/navigation-button.js"></script>
 </body>
 
 </html>
