--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -28,10 +28,10 @@
             color: #555;
         }
 
-        .meeting-content h4 {
+        /* .meeting-content h4 {
             font-size: 22px;
             font-weight: bold;
-        }
+        } */
 
         .meeting-content p,
         .meeting-content li {
