--- a/engineering_notebook/ch06.html
+++ b/engineering_notebook/ch06.html
@@ -257,7 +257,7 @@
         
         <h3>二代车 (Gen 2) 研发规划</h3>
         <p>基于本章收集的测试数据与实战反馈，工程团队已制定下一阶段的迭代目标：</p>
-        <div class="highlight-box" style="margin-top: 20px; border-left: 5px solid #00BCD4; padding-left: 20px;">
+        <div class="highlight-box type-cyan">
             <ol style="line-height: 1.8;">
                 <li><strong>底盘重构：</strong> 调整齿轮比，降低速度以换取更高的扭矩与控制精度，消除漂移现象。</li>
                 <li><strong>结构升级：</strong> 重新设计抬升机构，增加有效行程以覆盖高塔得分区；优化“面状”辅助定位结构。</li>
