ch04: more pics

--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -188,13 +188,15 @@
         <h4>1. 底盘系统：四轮差速驱动</h4>
         <p>采用经典的左右双电机驱动模式，搭载 4 个全向轮（Omni Wheels）以减少转向摩擦阻力。配置 2
             倍速齿轮组（48:24），在保证推力的前提下提升移动速度。</p>
+        <img src="assets/ch04/4_n_4_1.webp" alt="一代车概念草图"
+            style="height:150px; display: block; margin: 10px auto; border-radius: 15px;">
+
         <h4>2. 抓取系统：气动钳形爪 (Pneumatic Claw)</h4>
         <p>利用气动系统的瞬时响应特性，设计 L 型开合爪。气缸伸出时闭合抓取，缩回时张开释放。此方案有效减少了电机占用，且抓取力度恒定。</p>
-        <h4>3. 抬升系统：单电机连杆</h4>
-        <p>采用单边驱动的四连杆结构，配合橡皮筋进行重力补偿。该结构足以满足两层销钉堆叠的高度需求。</p>
+        <img src="assets/ch04/4_n_4_2.webp" alt="一代车概念草图"
+            style="height:200px; display: block; margin: 10px auto; border-radius: 15px;">
 
-        <h4>4. 翻转系统：末端旋转手腕</h4>
-        <p>在机械臂末端集成翻转电机，实现抓手 0-180 度的姿态切换，满足反向堆叠的要求。</p>
+
 
 
 
@@ -202,6 +204,13 @@
 
     <div class="sheet">
         <h1>4.4 一代车设计定稿（续）</h1>
+
+        <h4>3. 抬升系统：单电机连杆</h4>
+        <p>采用单边驱动的四连杆结构，配合橡皮筋进行重力补偿。该结构足以满足两层销钉堆叠的高度需求。</p>
+
+        <h4>4. 翻转系统：末端旋转手腕</h4>
+        <p>在机械臂末端集成翻转电机，实现抓手 0-180 度的姿态切换，满足反向堆叠的要求。</p>
+
         <h3>一代车概念设计草图</h3>
         <img src="assets/ch04/4_n_4.webp" alt="一代车概念草图"
             style="height:400px; display: block; margin: 10px auto; border-radius: 15px;">
@@ -266,8 +275,9 @@
         <p>
             下一阶段，我们将进入实质性的制造与调试环节，验证这一设计理念在物理世界中的表现。
         </p>
+        <br>
         <img src="assets/ch04/4_n_z.webp" alt="准备搭建"
-            style="height:400px; display: block; margin: 10px auto; border-radius: 15px;">
+            style="height:380px; display: block; margin: 10px auto; border-radius: 15px;">
 
 
     </div>
