ch04: added 1 more page for port mapping

--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -142,7 +142,53 @@
         </table>
 
     </div>
+    <div class="sheet">
 
+        <h1>4.2 系统架构与模块划分（续）</h1>
+        <h3>电控端口规划</h3>
+        <!-- <img src="assets/ch04/4_n_2.webp" alt="系统布局示意" style="height:400px; display: block; margin: 10px auto;"> -->
+        <p>为了规范布线并指导后续编程工作，我们制定了标准的端口分配表。这种标准化的定义有助于硬件组与程序组之间的协作。</p>
+
+        <table style="width: 100%; border-collapse: collapse; margin-top: 15px; font-size: 14px; text-align: center;">
+            <tr style="background: #eee; font-weight: bold;">
+                <td style="border: 1px solid #999; padding: 8px;">端口 (Port)</td>
+                <td style="border: 1px solid #999; padding: 8px;">设备 (Device)</td>
+                <td style="border: 1px solid #999; padding: 8px;">功能描述 (Function)</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">1</td>
+                <td style="border: 1px solid #999; padding: 6px;">左底盘电机 (Left Drive)</td>
+                <td style="border: 1px solid #999; padding: 6px;">负责左侧驱动</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">6</td>
+                <td style="border: 1px solid #999; padding: 6px;">右底盘电机 (Right Drive)</td>
+                <td style="border: 1px solid #999; padding: 6px;">负责右侧驱动</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">4</td>
+                <td style="border: 1px solid #999; padding: 6px;">抬升电机 (Lift Motor)</td>
+                <td style="border: 1px solid #999; padding: 6px;">驱动四连杆升降</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">10</td>
+                <td style="border: 1px solid #999; padding: 6px;">翻转电机 (Flip Motor)</td>
+                <td style="border: 1px solid #999; padding: 6px;">驱动手腕旋转 180°</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">11</td>
+                <td style="border: 1px solid #999; padding: 6px;">气动电磁阀 (Solenoid)</td>
+                <td style="border: 1px solid #999; padding: 6px;">控制气爪开合</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #999; padding: 6px;">2</td>
+                <td style="border: 1px solid #999; padding: 6px;">陀螺仪 (Gyro)</td>
+                <td style="border: 1px solid #999; padding: 6px;">辅助自动阶段转向</td>
+            </tr>
+        </table>
+
+
+    </div>
     <!-- ================= PAGE 64: 方案筛选 ================= -->
     <div class="sheet">
         <h1>4.3 备选方案评估与淘汰</h1>
