removed footers from ch06, 07 and 08

--- a/engineering_notebook/ch04.html
+++ b/engineering_notebook/ch04.html
@@ -142,11 +142,10 @@
         </table>
 
     </div>
-    <div class="sheet">
+    <!-- <div class="sheet">
 
         <h1>4.2 系统架构与模块划分（续）</h1>
         <h3>电控端口规划</h3>
-        <!-- <img src="assets/ch04/4_n_2.webp" alt="系统布局示意" style="height:400px; display: block; margin: 10px auto;"> -->
         <p>为了规范布线并指导后续编程工作，我们制定了标准的端口分配表。这种标准化的定义有助于硬件组与程序组之间的协作。</p>
 
         <table style="width: 100%; border-collapse: collapse; margin-top: 15px; font-size: 14px; text-align: center;">
@@ -188,7 +187,7 @@
         </table>
 
 
-    </div>
+    </div> -->
     <!-- ================= PAGE 64: 方案筛选 ================= -->
     <div class="sheet">
         <h1>4.3 备选方案评估与淘汰</h1>
