--- a/engineering_notebook/ch07.html
+++ b/engineering_notebook/ch07.html
@@ -11,11 +11,11 @@
     <!-- ================= PAGE 117: 章节封面 ================= -->
     <div class="sheet">
         <div style="text-align: center; margin-top: 120px;">
-            <h1 style="font-size: 56px; border: none; color: #8E44AD;">设计迭代与优化</h1>
+            <h1 style="font-size: 56px; border: none;">设计迭代与优化</h1>
             <h2 style="font-size: 36px; background: none; color: #555;">第七章：二代车 (Gen 2) 的进化之路</h2>
             <h3 style="font-size: 24px; color: #888; border: none;">Chapter 7: Design Iteration: The Generation 2</h3>
             
-            <div style="width: 80%; height: 8px; background: #9B59B6; margin: 40px auto; border-radius: 5px;"></div>
+            <div style="width: 80%; height: 8px; background: var(--secondary-color); margin: 40px auto; border-radius: 5px;"></div>
             
             <div style="text-align: left; margin: 60px 80px; font-size: 20px; line-height: 2;">
                 <p>
