ch01: add one more meeting minutes

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -456,7 +456,7 @@
                     <td class="label">主题</td>
                     <td>战队成立、分工与赛季启动</td>
                     <td class="label">时间</td>
-                    <td>2025年6月15日</td>
+                    <td>2025年6月8日</td>
                 </tr>
                 <tr>
                     <td class="label">出席人</td>
@@ -482,15 +482,50 @@
         </div>
     </div>
 
-
-    </div>
-
-    <!-- ================= PAGE: Meeting 2 ================= -->
     <div class="sheet">
         <h1>会议记录 (2)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 250602</span>
+            </div>
+            <table class="meeting-info-table">
+                <tr>
+                    <td class="label">主题</td>
+                    <td>进一步分析规则与初步策略规划</td>
+                    <td class="label">时间</td>
+                    <td>2025年6月15日</td>
+                </tr>
+                <tr>
+                    <td class="label">出席人</td>
+                    <td>叶恒瑞、叶恒嘉、宋书玥</td>
+                    <td class="label">地点</td>
+                    <td>西城区科技馆</td>
+                </tr>
+            </table>
+            <div class="meeting-content">
+                <h4>会议内容:</h4>
+                <ul>
+                    <li>研读《Mix & Match 游戏手册》，结合官方视频分析得分细节。</li>
+                    <li><strong>核心发现：</strong> Beam (梁) 是关键！它不仅分值高 (10分)，还能作为“万能连接器”帮助获得颜色匹配奖励 (Matching Bonus)。</li>
+                    <li><strong>规则利用：</strong> 确认机器人起始大小限制为 11"x20"x15" (&lt;R5&gt;)，但垂直方向可无限扩展
+                        (&lt;SG3&gt;)，这为我们设计“能伸缩的高塔机器人”提供了依据。</li>
+                </ul>
+                <h4>讨论过程及结果 - 策略大辩论:</h4>
+                <p><strong>叶恒瑞 (数据计算)：</strong> “与Beam组合的Stack都可以拿到‘匹配奖励’，而放上了高塔的Stack又都可以拿到‘高塔奖励’。同时拿到这两种奖励，可以极大的提升我们的得分优势。”</p>
+                <p><strong>宋书玥 (战术担忧)：</strong> “但是高塔很难爬，而且要抓那么重的 Beam，机器人重心会很稳吗？”</p>
+                <p><strong>叶恒嘉 (结构设想)：</strong> “这确实是难点。我们需要设计一个非常紧凑的折叠结构，起步时缩进去，比赛时像长颈鹿一样伸出来。”</p>
+                <p><strong>最终决定：</strong> 战队一致决定，将“快速构建含Beam的堆叠”确立为首要攻坚目标，并以此展开机器的设计与搭建。</p>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- ================= PAGE: Meeting 2 ================= -->
+    <div class="sheet">
+        <h1>会议记录 (3)</h1>
+        <div class="meeting-card">
+            <div class="meeting-header">
+                <span class="meeting-id">编号: 250603</span>
             </div>
             <table class="meeting-info-table">
                 <tr>
@@ -526,7 +561,7 @@
 
     <!-- ================= PAGE: Meeting 3 ================= -->
     <div class="sheet">
-        <h1>会议记录 (3)</h1>
+        <h1>会议记录 (4)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 250701</span>
@@ -568,7 +603,7 @@
 
     <!-- ================= PAGE: Meeting 4 ================= -->
     <div class="sheet">
-        <h1>会议记录 (4)</h1>
+        <h1>会议记录 (5)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 250702</span>
@@ -615,7 +650,7 @@
 
     <!-- ================= PAGE: Meeting 5 ================= -->
     <div class="sheet">
-        <h1>会议记录 (5)</h1>
+        <h1>会议记录 (6)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 250801</span>
@@ -655,7 +690,7 @@
 
     <!-- ================= PAGE: Meeting 6 ================= -->
     <div class="sheet">
-        <h1>会议记录 (6)</h1>
+        <h1>会议记录 (7)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 250901</span>
@@ -697,7 +732,7 @@
 
     <!-- ================= PAGE: Meeting 7 ================= -->
     <div class="sheet">
-        <h1>会议记录 (7)</h1>
+        <h1>会议记录 (8)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 251001</span>
@@ -740,7 +775,7 @@
 
     <!-- ================= PAGE: Meeting 8 ================= -->
     <div class="sheet">
-        <h1>会议记录 (8)</h1>
+        <h1>会议记录 (9)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 251002</span>
@@ -779,7 +814,7 @@
 
     <!-- ================= PAGE: Meeting 9 ================= -->
     <div class="sheet">
-        <h1>会议记录 (9)</h1>
+        <h1>会议记录 (10)</h1>
         <div class="meeting-card">
             <div class="meeting-header">
                 <span class="meeting-id">编号: 251101</span>
