ch01: minor fixes

--- a/engineering_notebook/ch01.html
+++ b/engineering_notebook/ch01.html
@@ -54,9 +54,11 @@
             <!-- 修改部分：替换基本信息为章节介绍 -->
             <div style="text-align: center; margin: 60px 60px; font-size: 20px; line-height: 1.8; color: #444;">
                 <p>
-                    本章记录了 2276A 战队从零开始的组建过程。
+                    本章记录了 2276A 战队从零开始的组建过程。</p>
+                <p>
                     在这里，你将看到我们是如何聚在一起，确立共同的目标与队规。
-                    我们也记录了对竞赛规则的初步研读，以及第一台机器人的诞生故事。
+                    我们也记录了对竞赛规则的初步研读，以及第一台机器人的诞生故事。</p>
+                <p>
                     虽然充满挑战，但这正是我们梦想启航的地方。
                 </p>
             </div>
@@ -511,7 +513,8 @@
                         (&lt;SG3&gt;)，这为我们设计“能伸缩的高塔机器人”提供了依据。</li>
                 </ul>
                 <h4>讨论过程及结果 - 策略大辩论:</h4>
-                <p><strong>叶恒瑞 (数据计算)：</strong> “与Beam组合的Stack都可以拿到‘匹配奖励’，而放上了高塔的Stack又都可以拿到‘高塔奖励’。同时拿到这两种奖励，可以极大的提升我们的得分优势。”</p>
+                <p><strong>叶恒瑞 (数据计算)：</strong>
+                    “与Beam组合的Stack都可以拿到‘匹配奖励’，而放上了高塔的Stack又都可以拿到‘高塔奖励’。同时拿到这两种奖励，可以极大的提升我们的得分优势。”</p>
                 <p><strong>宋书玥 (战术担忧)：</strong> “但是高塔很难爬，而且要抓那么重的 Beam，机器人重心会很稳吗？”</p>
                 <p><strong>叶恒嘉 (结构设想)：</strong> “这确实是难点。我们需要设计一个非常紧凑的折叠结构，起步时缩进去，比赛时像长颈鹿一样伸出来。”</p>
                 <p><strong>最终决定：</strong> 战队一致决定，将“快速构建含Beam的堆叠”确立为首要攻坚目标，并以此展开机器的设计与搭建。</p>
