ch05: minor update

--- a/engineering_notebook/ch05.html
+++ b/engineering_notebook/ch05.html
@@ -281,7 +281,7 @@
         <h1>第五章总结：系统就绪</h1>
 
         <p>
-            历经 19 天的设计与制造周期，一代车（Gen 1）已完成全部硬件搭建与基础软件调试。
+            历经两周的设计与制造周期，一代车（Gen 1）已完成全部硬件搭建与基础软件调试。
         </p>
         <p>
             <strong>实施成果评估：</strong>
